added greeting page styles

--- a/index.html
+++ b/index.html
@@ -9,20 +9,36 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Redberry Knight Cup</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,800;1,500&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/styles/base.css" />
   </head>
   <body>
     <main>
-      <section id="side-img">
-        <div>
-          <h1>header</h1>
-          <img src="/images/Landing page- scrolling photo.jpg" alt="chess figures" />
+      <section class="sides" id="theme-side">
+        <div class="header-logo">
+          <img
+            src="/images/icons/Vector (3)s.png"
+            alt="Redberry Knight Cup icon"
+          />
+          <h1 id="theme-header">Redberry Knight Cup</h1>
         </div>
       </section>
-      <section>
-        <h2>
-            text text <span>little dark text</span> text text
-        </h2>
-        <button class="btn">get started <img src="/images/icons/arrow-right-circle.png" alt="button icon"></button>
+      <section class="sides" id="main-side">
+        <div>
+          <h2>
+            Chess says <span>a lot about</span> <br />
+            who we are
+          </h2>
+          <button class="btn">
+            <img src="/images/icons/Property 1=Default.png" alt="get started">
+          </button>
+        </div>
       </section>
     </main>
   </body>
