styled tab form title

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
       </section>
       <section class="sides" id="main-side">
-        <div>
+        <div id="landing-text">
           <h2>
             Chess says <span>a lot about</span> <br />
             who we are
