--- a/personal-information.html
+++ b/personal-information.html
@@ -36,29 +36,42 @@
           <hr />
         </article>
         <article>
-            <ol id="tabs-list">
-              <li>
-                <p class="tab-index">1</p>
-                <h5>Personal information</h5>
-              </li>
-              <hr>
-              <li>
-                <p class="tab-index">2</p>
-                <h5>Chess experience</h5>
-              </li>
-            </ol>
+          <ol id="tabs-list">
+            <li class="tab-index">
+              <p>1</p>
+              <h5>Personal information</h5>
+            </li>
+            <hr />
+            <li class="tab-index">
+              <p>2</p>
+              <h5>Chess experience</h5>
+            </li>
+          </ol>
         </article>
         <article>
+          <div class="form-title">
             <h4>Personal information</h4>
             <p>This is basic informaton fields</p>
-            <form id="personal-information" action="" method="">
-                <input class="input-field" type="text" id="name" minlength="2" required>
-                <input class="input-field" type="email" value="Email address *" required>
-                <input class="input-field" type="number"  required>
-                <input class="input-field" type="date"  required>
-                <button>Back</button>
-                <button>Next</button>
-            </form>
+          </div>
+          <form id="personal-information" action="" method="">
+            <input
+              class="input-field"
+              type="text"
+              id="name"
+              minlength="2"
+              required
+            />
+            <input
+              class="input-field"
+              type="email"
+              value="Email address *"
+              required
+            />
+            <input class="input-field" type="number" required />
+            <input class="input-field" type="date" required />
+            <button>Back</button>
+            <button>Next</button>
+          </form>
         </article>
       </section>
     </main>
