styled form and buttons

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
           </h2>
 
           <a href="/personal-information.html">
-              <button class="btn">
-                <img src="/images/icons/Property 1=Default.png" alt="get started">
+              <button class="btn">Get started
+                <img src="/images/icons/Vector.png" alt="get started">
               </button>
         </a>
       </div>
