--- a/personal-information.html
+++ b/personal-information.html
@@ -53,7 +53,7 @@
             <h4>Personal information</h4>
             <p>This is basic informaton fields</p>
           </div>
-          <form id="personal-information" action="" method="">
+          <form id="personal-information">
             <input
               class="input-field"
               type="text"
@@ -69,8 +69,10 @@
             />
             <input class="input-field" type="number" required />
             <input class="input-field" type="date" required />
-            <button>Back</button>
-            <button>Next</button>
+            <div id="form-controll">
+                <button class="btn btn-alt">Back</button>
+                <button class="btn">Next <img src="/images/icons/Vector.png" alt="next"></button>
+            </div>
           </form>
         </article>
       </section>
