added and styled Quote

--- a/personal-information.html
+++ b/personal-information.html
@@ -29,6 +29,11 @@
           />
           <h1 id="theme-header">Redberry Knight Cup</h1>
         </div>
+        <div id="quote">
+            <h2>“When you see a good move,
+                look for a better one.”</h2>
+                <p>-Emanuel Lasker</p>
+        </div>
       </section>
       <section class="sides" id="main-side">
         <article id="title-container">
@@ -58,6 +63,7 @@
               class="input-field"
               type="text"
               id="name"
+              value="name *"
               minlength="2"
               required
             />
@@ -67,7 +73,7 @@
               value="Email address *"
               required
             />
-            <input class="input-field" type="number" required />
+            <input class="input-field" placeholder="Phone number" type="number" required />
             <input class="input-field" type="date" required />
             <div id="form-controll">
                 <button class="btn btn-alt">Back</button>
