--- a/personal-information.html
+++ b/personal-information.html
@@ -43,12 +43,12 @@
         <article>
           <ol id="tabs-list">
             <li class="tab-index">
-              <p>1</p>
+              <p class="">1</p>
               <h5>Personal information</h5>
             </li>
             <hr />
             <li class="tab-index">
-              <p>2</p>
+              <p class="inactive">2</p>
               <h5>Chess experience</h5>
             </li>
           </ol>
