changed button to link temporarely to move between pages more easy

--- a/personal-information.html
+++ b/personal-information.html
@@ -30,9 +30,8 @@
           <h1 id="theme-header">Redberry Knight Cup</h1>
         </div>
         <div id="quote">
-            <h2>“When you see a good move,
-                look for a better one.”</h2>
-                <p>-Emanuel Lasker</p>
+          <h2>“When you see a good move, look for a better one.”</h2>
+          <p>-Emanuel Lasker</p>
         </div>
       </section>
       <section class="sides" id="main-side">
@@ -73,11 +72,22 @@
               value="Email address *"
               required
             />
-            <input class="input-field" placeholder="Phone number" type="number" required />
+            <input
+              class="input-field"
+              placeholder="Phone number"
+              type="number"
+              required
+            />
             <input class="input-field" type="date" required />
             <div id="form-controll">
-                <button class="btn btn-alt">Back</button>
-                <button class="btn">Next <img src="/images/icons/Vector.png" alt="next"></button>
+              <!-- temporar link to main will be changed later -->
+              <a href="/index.html">
+                <button type="button" class="btn btn-alt">Back</button>
+              </a>
+              <!--  -->
+              <button class="btn">
+                Next <img src="/images/icons/Vector.png" alt="next" />
+              </button>
             </div>
           </form>
         </article>
