--- a/personal-information.html
+++ b/personal-information.html
@@ -18,6 +18,7 @@
     />
     <link rel="stylesheet" href="/styles/base.css" />
     <link rel="stylesheet" href="/styles//personal-info.css" />
+    <script src="/scripts/app.js" defer></script>
   </head>
   <body>
     <main>
