added popup functionality with dynamicly changing text

--- a/personal-information.html
+++ b/personal-information.html
@@ -58,6 +58,17 @@
             <h4>Personal information</h4>
             <p>This is basic informaton fields</p>
           </div>
+          <aside id="error-popup">
+            <div>
+              <img src="/images/icons/invalid.png" id="error-ico" alt="error icon">
+              <p id="error-message">error message</p>
+              <span id="close-popup">&#x2715</span>
+            </div>
+            
+              <hr>
+              <p id="error-text">error text</p>
+            
+          </aside>
           <form id="personal-information" autocomplete="off">
             <input
               class="input-field"
