started working on second form

--- a/personal-information.html
+++ b/personal-information.html
@@ -43,12 +43,12 @@
         <article>
           <ol id="tabs-list">
             <li class="tab-index">
-              <p class="">1</p>
+              <p class="" id="first-tab">1</p>
               <h5>Personal information</h5>
             </li>
             <hr />
             <li class="tab-index">
-              <p class="inactive">2</p>
+              <p class="inactive" id="second-tab">2</p>
               <h5>Chess experience</h5>
             </li>
           </ol>
@@ -106,17 +106,17 @@
               min="1900-01-01"
               required
             />
-            <div id="form-controll">
-              <!-- temporar link to main will be changed later -->
-              <a href="/index.html">
-                <button type="button" class="btn btn-alt">Back</button>
-              </a>
-              <!--  -->
-              <button class="btn">
-                Next <img src="/images/icons/Vector.png" alt="next" />
-              </button>
-            </div>
           </form>
+          <div id="form-controll">
+            <!-- temporar link to main will be changed later -->
+            <a href="/index.html">
+              <button type="button" class="btn btn-alt">Back</button>
+            </a>
+            <!--  -->
+            <button class="btn">
+              Next <img src="/images/icons/Vector.png" alt="next" />
+            </button>
+          </div>
         </article>
       </section>
     </main>
